# docs/swagger.json
@@ -1940,6 +1940,32 @@
                         "description": "Internal Server Error"
                     }
                 }
+            },
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ServiceAccount"
+                ],
+                "summary": "서비스 어카운트 생성",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client ID",
+                        "name": "clientId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
             }
         },
         "/serviceAccount/{clientId}/secret": {
@@ -1974,7 +2000,7 @@
             }
         },
         "/serviceAccount/{clientId}/secret/regenerate": {
-            "get": {
+            "post": {
                 "produces": [
                     "application/json"
                 ],
