# main.go
@@ -162,7 +162,8 @@ func makeRouter() *gin.Engine {
 	{
 		serviceAccount.GET("", api.GetServiceAccount)
 		serviceAccount.GET("/:clientId/secret", api.GetServiceAccountSecret)
-		serviceAccount.GET("/:clientId/secret/regenerate", api.RegenerateServiceAccountSecret)
+		serviceAccount.POST("/:clientId/secret/regenerate", api.RegenerateServiceAccountSecret)
+		serviceAccount.POST("", api.CreateServiceAccount)
 	}
 
 	accountUser := route.Group("/account/:accountId/users")
